Update CoordinatesService to use MultiPolygon.getCentroid()